--- a/index.html
+++ b/index.html
@@ -4,60 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Vision Board</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
       <article>
           <header>
-            <h1>Vision Board</h1>  
-            <p>Goal 1</p>
-            <p>IT Professional</p>
+            <h1 id="mainHeading">Vision Board</h1>  
+            <h3>~~~~~ Goal 1 ~~~~~</h3>
+            <h4>IT Professional</h4>
           </header>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
           <img src="/images/120839472-calm-african-american-business-man-take-break-at-workplace-relaxing-finished-work-happy-black-profes.jpg" alt="IT Professional">
       </article>
       <article>
         <header>
-          <h1>Vision Board</h1>  
-          <p>Goal 2</p>
-          <p>Additional Vehicle</p>
+          <!-- <h1>Vision Board</h1>   -->
+          <h3>~~~~~ Goal 2 ~~~~~</h3>
+          <h4>New Vehicle</h4>
         </header>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
+        <p class="funParagraph" alt="green text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
         <img src="/images/RGL21-205_RTLE_AWD_NH_883P_Platinum-White-Pearl.webp" alt="Honda Ridgeline 2021"
     </article>
     <article>
         <header>
-          <h1>Vision Board</h1>  
-          <p>Goal 3</p>
-          <p>New House</p>
+          <!-- <h1>Vision Board</h1>   -->
+          <h3>~~~~~ Goal 3 ~~~~~</h3>
+          <h4>New House</h4>
         </header>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
         <img src="/images/52961-b600.jpg"
     </article>
     <article>
+      <header>
+        <!-- <h1>Vision Board</h1>   -->
+        <h3>~~~~~ Goal 4 ~~~~~</h3>
+        <h4>Trip to London</h4>
+      </header>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
+      <img src="/images/Big-Ben-916x514-916x514-1-916x514.jpg" alt="Trip to London">
+  </article>
+    <article>
         <header>
-          <h1>Vision Board</h1>  
-          <p>Goal 4</p>
-          <p>Music Producer</p>
+          <!-- <h1>Vision Board</h1>   -->
+          <h3>~~~~~ Goal 5 ~~~~~</h3>
+          <h4>Grammy Award</h4>
         </header>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
         <img src="/images/Gram-my-Awa-rds.jpg" alt="Grammy">
     </article>
     <article>
         <header>
-          <h1>Vision Board</h1>  
-          <p>Goal 5</p>
-          <p>Trip to London</p>
-        </header>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-        <img src="/images/Big-Ben-916x514-916x514-1-916x514.jpg" alt="Trip to London">
-    </article>
-    <article>
-        <header>
           <!-- <h1>Vision Board</h1>   -->
-          <p>Goal 6</p>
-          <p>Djing / traveling</p>
+          <h3>~~~~~ Goal 6 ~~~~~</h3>
+          <h4>Djing / traveling</h4>
         </header>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
         <img src="/images/maxresdefault.jpg" alt="DJ traveling the world">
@@ -65,12 +65,29 @@
     <article>
         <header>
           <!-- <h1>Vision Board</h1>   -->
-          <p>Goal 7</p>
-          <p>Apple Desktop</p>
+          <h3>~~~~~ Goal 7 ~~~~~</h3>
+          <h4>Apple Desktop</h4>
         </header>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-        <img src="/images/color_front_green__eb8qbnemmre6_large_2x.jpg">
-        <img src="/images/color_back_green__buxxfjccqjzm_large_2x.jpg" alt="iMac 24 inch 2021">
+        <div class="container">
+          <div class="row">
+            <div class="column">
+              <img src="/images/apple-imac-24-2021-header.jpg" id="appleimage">
+            </div>
+            <div class="column">
+              <img src="/images/Apple-iMac-24-in-Green-4-port-3-square_medium.jpg"  id="appleimage"> 
+            </div>
+          </div>
+
+        </div>
+
+
+       
+
+        <!-- <img src="/images/apple-imac-24-2021-header.jpg"><br><img src="/images/Apple-iMac-24-in-Green-4-port-3-square_medium.jpg"  id="appleimage"> -->
+
+
+        <!-- <img src="/images/Apple-iMac-24-in-Green-4-port-3-square_medium.jpg" id="appleimage"> -->
     </article>
 	<script src="index.js"></script>
   </body>
