--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h4>IT Professional</h4>
           </header>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-          <img src="/images/120839472-calm-african-american-business-man-take-break-at-workplace-relaxing-finished-work-happy-black-profes.jpg" alt="IT Professional">
+          <img src="images/120839472-calm-african-american-business-man-take-break-at-workplace-relaxing-finished-work-happy-black-profes.jpg" alt="IT Professional">
       </article>
       <article>
         <header>
@@ -23,7 +23,7 @@
           <h4>New Vehicle</h4>
         </header>
         <p class="funParagraph" alt="green text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-        <img src="/images/RGL21-205_RTLE_AWD_NH_883P_Platinum-White-Pearl.webp" alt="Honda Ridgeline 2021"
+        <img src="images/RGL21-205_RTLE_AWD_NH_883P_Platinum-White-Pearl.webp" alt="Honda Ridgeline 2021">
     </article>
     <article>
         <header>
@@ -31,7 +31,7 @@
           <h4>New House</h4>
         </header>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-        <img src="/images/52961-b600.jpg"
+        <img src="images/52961-b600.jpg">
     </article>
     <article>
       <header>
@@ -39,7 +39,7 @@
         <h4>Trip to London</h4>
       </header>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-      <img src="/images/Big-Ben-916x514-916x514-1-916x514.jpg" alt="Trip to London">
+      <img src="images/Big-Ben-916x514-916x514-1-916x514.jpg" alt="Trip to London">
   </article>
     <article>
         <header>
@@ -47,7 +47,7 @@
           <h4>Grammy Award</h4>
         </header>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-        <img src="/images/Gram-my-Awa-rds.jpg" alt="Grammy">
+        <img src="images/Gram-my-Awa-rds.jpg" alt="Grammy">
     </article>
     <article>
         <header>
@@ -55,7 +55,7 @@
           <h4>Djing / traveling</h4>
         </header>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-        <img src="/images/maxresdefault.jpg" alt="DJ traveling the world">
+        <img src="images/maxresdefault.jpg" alt="DJ traveling the world">
     </article>
     <article>
         <header>
@@ -63,16 +63,16 @@
           <h4>Apple Desktop</h4>
         </header>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
-        <div class="container">
+        
           <div class="row">
             <div class="column">
-              <img src="/images/apple-imac-24-2021-header.jpg" id="appleimage">
+              <img src="images/apple-imac-24-2021-header.jpg" id="appleimac">
             </div>
             <div class="column">
-              <img src="/images/Apple-iMac-24-in-Green-4-port-3-square_medium.jpg"  id="appleimage"> 
+              <img src="images/Apple-iMac-24-in-Green-4-port-3-square_medium.jpg"  id="appleimac"> 
             </div>
           </div>
-        </div>
+        
     </article>
 	<script src="index.js"></script>
   </body>
