--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h3>~~~~~ Goal 2 ~~~~~</h3>
           <h4>New Vehicle</h4>
         </header>
-        <p class="funParagraph" alt="green text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
+        <p class="funParagraph" alt="green text" style="text-align: center;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quia! Nulla veritatis fuga ipsum autem incidunt, id nesciunt repellendus ratione consequuntur suscipit, dolor vero molestias quam inventore, repellat nam soluta.</p>
         <img src="images/RGL21-205_RTLE_AWD_NH_883P_Platinum-White-Pearl.webp" class="images" alt="Honda Ridgeline 2021">
     </article>
     <article>
