--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         
           <div class="row">
             <div class="column">
-              <img src="images/apple-imac-24-2021-header.jpg" id="appleimac">
+              <img src="images/apple-imac-24-2021-header.jpg" class="images" id="appleimac">
             </div>
             <div class="column">
-              <img src="images/Apple-iMac-24-in-Green-4-port-3-square_medium.jpg"  id="appleimac"> 
+              <img src="images/Apple-iMac-24-in-Green-4-port-3-square_medium.jpg"  class="images" id="appleimac"> 
             </div>
           </div>
         
